# database

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
database/: enum.Type.html  enum.Value.html  index.html  sidebar-items.js  struct.Error.html  type.Result.html
sqlite/: enum.State.html  enum.Type.html  fn.open.html  fn.version.html  index.html  sidebar-items.js  struct.Connection.html  struct.Error.html  struct.Statement.html  trait.Parameter.html  trait.Value.html  type.Result.html
sqlite3_sys/: constant.SQLITE_ABORT.html  constant.SQLITE_ABORT_ROLLBACK.html  constant.SQLITE_AUTH.html  constant.SQLITE_AUTH_USER.html  constant.SQLITE_BLOB.html  constant.SQLITE_BUSY.html  constant.SQLITE_BUSY_RECOVERY.html  constant.SQLITE_BUSY_SNAPSHOT.html  constant.SQLITE_CANTOPEN.html  constant.SQLITE_CANTOPEN_CONVPATH.html  constant.SQLITE_CANTOPEN_FULLPATH.html  constant.SQLITE_CANTOPEN_ISDIR.html  constant.SQLITE_CANTOPEN_NOTEMPDIR.html  constant.SQLITE_CONSTRAINT.html  constant.SQLITE_CONSTRAINT_CHECK.html  constant.SQLITE_CONSTRAINT_COMMITHOOK.html  constant.SQLITE_CONSTRAINT_FOREIGNKEY.html  constant.SQLITE_CONSTRAINT_FUNCTION.html  constant.SQLITE_CONSTRAINT_NOTNULL.html  constant.SQLITE_CONSTRAINT_PRIMARYKEY.html  constant.SQLITE_CONSTRAINT_ROWID.html  constant.SQLITE_CONSTRAINT_TRIGGER.html  constant.SQLITE_CONSTRAINT_UNIQUE.html  constant.SQLITE_CONSTRAINT_VTAB.html  constant.SQLITE_CORRUPT.html  constant.SQLITE_CORRUPT_VTAB.html  constant.SQLITE_DONE.html  constant.SQLITE_EMPTY.html  constant.SQLITE_ERROR.html  constant.SQLITE_FLOAT.html  (+124 more)
src/: lib.rs  (+6 more)
(+107 files in other folders)
