[package]
name = "database"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/hilbert-space/database"
homepage = "https://github.com/hilbert-space/database"
description = "Database."

[features]
default = ["sqlite"]

[dependencies.sqlite]
version = "0.17"
optional = true
